# davinci-functions

./: LICENSE  README.md  check.sh  pyproject.toml
.github/workflows/: ci.yml
davinci_functions/: __init__.py  _judge.py  _list.py
src/davinci_functions/: __init__.py  _explain.py  _explain_test.py  _function.py  _function_test.py  _judge.py  _judge_test.py  _list.py  _list_test.py
